
2012-11-02  ChunEon Park (Hermet)

        * Don't update map uv with image size for proxy object in elm_flip.

2012-11-07  Mikael Sans (xhell)

        * Fix wrong parameter for thumbnail error in elm_icon.

2012-11-12  Michael Bouchaud (yoz)

        * Add missing selected event in elm_index (elm_index_item_selected_set)

2012-11-21  Michael Bouchaud (yoz)

        * update the min size hint on elm_label after a text set

2012-11-22  Michael Bouchaud (yoz)

        * fix elm_flip to show only one face at a time

2012-11-22  ChunEon Park (Hermet)

        * Lets remove contents regardless of the preseve_on_set if naviframe is
        deleted.

2012-11-22  Shilpa Sigh (shilpa.singh@samsung.com)

        * Clear the title contents when naviframe item is deleted.

2012-11-23 Luis Felipe Strano Moraes

        1.7.2 release

2012-11-23  Carsten Haitzler (The Rasterman)

        * Fix build on systems without clearenv() (eg bsd).

2012-11-23  ChunEon Park (Hermet)

        * Free the text parts of the naviframe item when item is deleted.

2012-11-29  ChunEon Park (Hermet)

        * Fix the mapbuf to update it's contents correctly, even if they go
        outside of the buffer

2012-11-30  ChunEon Park (Hermet)

        * Fix the naviframe to resize it's items which are inserted.

2012-11-30  WooHyun Jung

        * Fix layout when content_set or text_set is called with NULL part name.

2012-11-30  ChunEon Park (Hermet)

        * emit the signals for content_set/unset text_set/unset one time!

2012-12-02  Mike Blumenkrantz

        * Fix case where tooltips could go offscreen unnecessarily

2012-12-04  Cedric Bail

	* Fix a possible divide by zero in els_scroller animator.

2012-12-05  Cedric Bail

	* Fix uninitialized data path in elm_flip, elm_gesture_layer,
	elm_interface_scrollable, els_scroller.

2012-12-05  Shilpa Onkar Singh (shilpa.singh@samsung.com)

	* Fix naviframe to not send hide signals even before item doens't created
  	yet.