@@ -13,6 +13,7 @@ Fixes:
    * Fix case where tooltips could go offscreen unnecessarily
    * Fix possible divide by zero in els_scroller animator.
    * Fix uninitialized data path in elm_flip, elm_gesture_layer, elm_interface_scrollable, els_scroller.
+   * Fix possible segv in elm_quicklaunch infrastructure.
 
 
 Elementary 1.7.2
